Fixed test execution